-- along with this package; see the file COPYING.  If not, write to
-- the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
-- Boston, MA 02110-1301, USA.  
--

This file lists user visible changes that were made between releases.  For
more verbose descriptions of these and internal changes see the ChangeLog
files.

Version 0.0.13
--------------

 * allowing engineering notation of numbers in equations
 * support for Touchstone files as an export file format in qucsconv
 * support for CSV files as an import file format in qucsconv
 * new component: file based voltage source

Version 0.0.12
--------------

 * added vt(), hypot() and limexp() to the available functions
 * new logical and rational operators in equation solver as well as
   the ternary ?: construct
 * added arcsec(), arccosec(), arsech() and arcosech() functions
 * support for equation defined devices
 * new components: exponential voltage and current source

Version 0.0.11
--------------

 * implemented knee current in diode model
 * allow input parameters of components in equations
 * implementation of non-ideal microstrip cross model
 * allow equation variables in component properties
 * equations in subcircuits
 * subcircuit parameters: from equations or sweep parameters
 * twisted pair and 4-terminal transmission line implementation
 * bondwire model implementation
 * new Verilog-AMS device models: HICUM L2 v2.1 and FBH HBT
 * using ADMS XML scripts for Verilog-AMS device models
 * implemented excess phase of BJT during transient analysis

Version 0.0.10
--------------

 * initial conditions (transient analysis) for L and C
 * support for IC-CAP MDL files as an import file format in qucsconv
 * support for ZVR ascii data (R&S network analyzer) as an import file
   format in qucsconv
 * new function in equation solver: signum()
 * SVD algorithm as equation system solver available
 * support for CITIfile and Touchstone as an import file format in
   qucsconv

Version 0.0.9