@@ -1,3 +1,7 @@
+2007-09-20  Stefan Jahn  <stefan@lkcc.org>
+
+	* evaluate.cpp: Added random number functions.
+
 2007-09-04  Stefan Jahn  <stefan@lkcc.org>
 
 	* differentiate.cpp: Fixed some memory leaks.
